--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header>ヘッダー</header>
+      <%= yield %>
+    <footer>ヘッダー</footer>
   </body>
 </html>
